Update tahun manual 8 kel data

--- a/resources/sass/stisla/style.scss
+++ b/resources/sass/stisla/style.scss
@@ -126,4 +126,4 @@
 /* 4.5 Animation */
 @import "theme/animation";
 
-@import "~select2/src/scss/core.scss"
+@import '~select2/src/scss/core.scss';
