--- a/resources/sass/stisla/_variable.scss
+++ b/resources/sass/stisla/_variable.scss
@@ -1,19 +1,4 @@
-$colors: ( // primary:    		#6777ef,
-    // secondary:      #cdd3d8,
-    // success:        #47c363,
-    // info:           #3abaf4,
-    // warning:        #ffa426,
-    // danger:         #fc544b,
-    // light:          #e3eaef,
-    // grey:  		      #868e96,
-    // whitesmoke:     #f7f9f9,
-    // dark:       		#191d21,
-    // muted:          #98a6ad,
-    // body:           #f4f6f9,
-    // font:           #6c757d,
-    // fontdark:       #34395e,
-    // white:          #ffffff,
-    primary: #293A80,
+$colors: (primary: #293A80,
     secondary: #cdd3d8,
     success: #47c363,
     info: #3abaf4,
@@ -33,10 +18,10 @@ $colors: ( // primary:    		#6777ef,
     formcontrol_normal_background: #fdfdff,
     formcontrol_normal_border: #e4e6fc,
     formcontrol_focus_background: #fefeff,
-    formcontrol_focus_border: #537EC5,
+    formcontrol_focus_border: #95a0f4,
 
     // Utilities
-    section_title_line: #293A80,
+    section_title_line: #6777ef,
 );
 
 $font_family: 'Nunito',
