--- a/resources/sass/stisla/style.scss
+++ b/resources/sass/stisla/style.scss
@@ -51,14 +51,17 @@
  * 5. Responsive
  *
  */
+
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
 @import '~@fortawesome/fontawesome-free/scss/fontawesome.scss';
 @import '~@fortawesome/fontawesome-free/scss/solid.scss';
 @import '~@fortawesome/fontawesome-free/scss/brands.scss';
 @import '~@fortawesome/fontawesome-free/scss/regular.scss';
 @import '~@fortawesome/fontawesome-free/scss/v4-shims.scss';
-
 @import '~bootstrap/scss/bootstrap.scss';
+@import '~select2/src/scss/core.scss';
+@import "~datatables.net-bs4/css/dataTables.bootstrap4.css";
+@import "~datatables.net-buttons-bs4/css/buttons.bootstrap4.css";
 
 /* 1. Variable */
 @import "_variable";
@@ -125,5 +128,3 @@
 @import "theme/layout";
 /* 4.5 Animation */
 @import "theme/animation";
-
-@import '~select2/src/scss/core.scss';
