--- a/resources/sass/stisla/style.scss
+++ b/resources/sass/stisla/style.scss
@@ -126,3 +126,25 @@
 @import "theme/layout";
 /* 4.5 Animation */
 @import "theme/animation";
+
+html {
+    scroll-behavior: smooth;
+}
+
+.scroll-top {
+    position: fixed;
+    right: 25px;
+    bottom: 20px;
+    display: none;
+    z-index: 9999;
+
+    &.show {
+        display: block;
+    }
+
+    button {
+        min-width: 40px;
+        min-height: 40px;
+        background-color: rgba($color: color(dark), $alpha: 0.8);
+    }
+}
