--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -95,11 +95,11 @@ div.dt-button-collection {
     padding: 0;
 }
 
-.buttons-columnVisibility {
+/* .buttons-columnVisibility {
     display: block;
 }
 
 .buttons-columnVisibility.active {
     background-color: rgba(128, 128, 128, 0.1);
     font-weight: bolder;
-}
+} */
