--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,7 +1,4 @@
 .ck-editor__editable,
-textarea {
-    min-height: 150px;
-}
 
 .datatable {
     width: 100% !important;
@@ -14,19 +11,14 @@ table.dataTable tbody th.select-checkbox::after {
     top: 50%;
 }
 
-.dataTables_length{
-    float: left;
-}
-
 .dataTables_length,
 .dataTables_filter,
 .dt-buttons {
     margin-bottom: 0.333em;
-    margin-top: .2rem;
 }
 
-.dataTables_filter {
-    margin-right: .2rem;
+.dataTables_length{
+  float: left !important;
 }
 
 .dt-buttons .btn {
@@ -40,56 +32,22 @@ table.dataTable tbody th.select-checkbox::after {
 }
 
 table.dataTable thead th {
-    border-bottom: 2px solid #c8ced3;
+    border-bottom: 2px solid #dee2e6;
 }
 
 .dataTables_wrapper.no-footer .dataTables_scrollBody {
-    border-bottom: 1px solid #c8ced3;
+    border-bottom: 1px solid #dee2e6;
 }
 
 .select2 {
-    max-width: 100% !important;
-    width: 100% !important;
-}
-
-.select2-selection__rendered {
-    padding-bottom: 5px !important;
-}
-
-.has-error .invalid-feedback {
-    display: block !important;
-}
-
-.btn-info,
-.badge-info {
-    color: white;
+    max-width: 100%;
+    width: 100%;
 }
 
 table.dataTable thead .sorting,
 table.dataTable thead .sorting_asc,
 table.dataTable thead .sorting_desc {
     background-image: none;
-}
-
-.sidebar .nav-item {
-    cursor: pointer;
-}
-
-.btn-default {
-    color: #23282c;
-    background-color: #f0f3f5;
-    border-color: #f0f3f5;
-}
-
-.btn-default.focus,
-.btn-default:focus {
-    box-shadow: 0 0 0 .2rem rgba(209, 213, 215, .5);
-}
-
-.btn-default:hover {
-    color: #23282c;
-    background-color: #d9e1e6;
-    border-color: #d1dbe1;
 }
 
 .btn-group-xs > .btn,
@@ -102,6 +60,9 @@ table.dataTable thead .sorting_desc {
 
 .searchable-title {
     font-weight: bold;
+}
+.select2-container--open {
+    z-index: 9999;
 }
 .searchable-fields {
     padding-left:5px;
@@ -127,10 +88,19 @@ table.dataTable thead .sorting_desc {
     display: block;
 }
 
-.c-sidebar-brand .c-sidebar-brand-full:hover {
-    color: inherit;
+.dataTables_length label select {
+    width: 65px!important;
 }
 
-.custom-select.form-control-sm {
-    padding: 0.25rem 1.5rem;
+div.dt-button-collection {
+    padding: 0;
+}
+
+.buttons-columnVisibility {
+    display: block;
+}
+
+.buttons-columnVisibility.active {
+    background-color: rgba(128, 128, 128, 0.1);
+    font-weight: bolder;
 }
